SERVER-11568 normalize sort order in query and index key pattern during planning